# taller_ahh1

./: .gitignore  README.md  pyproject.toml  unmapped_values.json
data/raw/: diccionario_nombre_variables.json  encuesta.csv
notebooks/: exploracion.marimo.py  preprocessing.ipynb  utils.py
notebooks/reports/: asociaciones_target.md  exploracion.marimo.html
scripts/: run_pipeline.py
src/taller_utils/: analysis.py  encoding.py  helpers.py  missing_data.py  visuals.py
tests/: conftest.py  test_encoding.py
